<resources>
    <string name="app_name">Happy Places App</string>
    <string name="et_hint_title">Title</string>
    <string name="et_hint_description">Description</string>
    <string name="et_hint_date">Date</string>
    <string name="et_hint_location">Location</string>
    <string name="btn_save">SAVE</string>
    <string name="tv_add_image">ADD IMAGE</string>
    <string name="no_happy_places_text">No happy places found</string>

    <string name = "google_maps_api_key">
        AIzaSyC09CDy0V7wpV9hxNzU8mZVX_FmtPio6mI
    </string>
    <string name="view_on_map">VIEW ON MAP</string>
    <string name="use_current_location">Use Current Location</string>
</resources>